--- a/worm_game_2player/index.html
+++ b/worm_game_2player/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Snake</title>
-        <link rel="stylesheet" href="snake.css">
+        <link rel="stylesheet" href="style.css">
         <script src="snake.js"></script>
     </head>
 
