--- a/worm_game_2player/index.html
+++ b/worm_game_2player/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Snake</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="snake.js"></script>
-    </head>
-
-    <body>
-        <h1>Snake</h1>
-        <canvas id="board"></canvas>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>지렁이 게임 2인용</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <script src="snake.js"></script>
+    <h1>Snake</h1>
+    <canvas id="board"></canvas>
+  </body>
 </html>
